added Vulnerablility button in help and support

--- a/trustpoint/templates/management/help.html
+++ b/trustpoint/templates/management/help.html
@@ -65,6 +65,25 @@
             </div>
         </div>
 
+        <!-- Report Security Issue -->
+        <div class="col-md-6">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5>
+                        <svg class="bi me-2" fill="currentColor" role="img" width="20" height="20">
+                            <use href="{% static 'img/icons.svg' %}#icon-shield-exclamation"></use>
+                        </svg>
+                            Report Security Issue
+                    </h5>
+                    <p class="text-muted">Found something Vulnerable? Help us fix it.</p>
+                    <a href="https://github.com/Trustpoint-Project/trustpoint/security/advisories/new"
+                       target="_blank" class="btn btn-danger" aria-label="Report a vulnerability on GitHub">
+                        Report Vulnerability
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <!-- Video Demos -->
         <div class="col-md-6">
             <div class="card h-100">
